<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	<string name="txtCredits">Credits</string>
	<string name="hrefCredits"><a href="http://www.google.com">Google</a></string>
	
	<string name="mapnavigation_exit_title">Chiusura app</string>
    <string name="mapnavigation_exit_message">Sicuro di voler uscire?</string>
    <string name="mapnavigation_exit_yesbutton">Sì</string>
    <string name="mapnavigation_exit_nobutton">No</string>
        
    <string name="mapnavigation_download_title">Aggiornamento audioguide</string>
    <string name="mapnavigation_download_message"></string>
    <string name="mapnavigation_download_yesbutton">Scarica Subito</string>
    <string name="mapnavigation_download_yesmessage">Scaricando tutto adesso, potrai usare le guide anche senza una connessione a internet.</string>
    <string name="mapnavigation_download_nobutton">Scarica Dopo</string>
    <string name="mapnavigation_download_nomessage">Se adesso non è il momento di scaricare megabyte, meglio rimandare a dopo, puoi scegliere tu cosa e quando mettere in download.</string>  
    <string name="mapnavigation_progressDialog_title">In progress...</string>
    <string name="mapnavigation_progressDialog_message">Loading...</string>
                  
   <string name="app_name">Catania</string>
   <string name="app_title">Visit In Catania - ITA</string>
    <string name="button_download">Download</string>
    <string name="button_play">Play</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_geo">GeoActivity</string>
    <string name="downloadAudio_description">Seleziona gli audio che intendi scaricare adesso e poi fai tap sul pulsante "Download".</string>
    
    <string name="result_activity">ResultActivity</string>
    <string name="submit">Add To Playlist</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list_item">MainActivity</string>
    <string name="image">Image</string>
    <string name="download">Download</string>
    <string name="title_activity_main1">MainActivity</string>
    <string name="title_activity_show_map">ShowMap</string>
         
     
     
    <string-array name="map_type_array">
        <item>normal</item>
        <item>hybrid</item>
        <item>terrain</item>        
    </string-array>
        <string name="poi_list_description">Elenco di tutti i punti di interesse</string>
        <string name="trail_list_description">Elenco dei percorsi consigliati</string>
        <string name="poi_download_description">Scarica gli audio mancanti</string>

</resources>