<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frg_download"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="top"
    android:orientation="vertical" 
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/lbl_frg_download_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="top"
        android:text="@string/mapnavigation_download_message"
        android:textSize="18sp" />  

    <LinearLayout
        android:id="@+id/frg_riga1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbl_frg_download_completeDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/mapnavigation_download_yesmessage"
            android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/frg_download_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mapnavigation_download_yesbutton"
            android:textSize="18sp" />

    </LinearLayout>

     <LinearLayout
         android:id="@+id/frg_riga2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
         android:orientation="vertical" >
         
	 	<TextView
	 	    android:id="@+id/lbl_frg_download_singleDownload"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:gravity="top"
	 	    android:text="@string/mapnavigation_download_nomessage"
	 	    android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp"
	 	    android:textSize="18sp" />
	 	
	 	<Button
	 	    android:id="@+id/frg_download_button2"
	 	    android:layout_width="match_parent"
	 	    android:layout_height="wrap_content"
	 	    android:text="@string/mapnavigation_download_nobutton"
	 	    android:textSize="18sp" />
	     
     </LinearLayout>

    
</LinearLayout>
